App working correctly, outputs a raw XML

--- a/CurrentNewsApp/appsettings.json
+++ b/CurrentNewsApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CurrentNewsDb" :  "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CurrentNews;Integrated Security=True"
+  }
 }
